@@ -1,4 +1,5 @@
 1.9.6:
+* Client/WebUI: some fixes around trying to show blocks fee stats while no such stats are stored
 * Tools/balio: fix for including spent otputs in the results from api.blockchair.com
 * Client: fixed problem with a high CPU usage in case of no network connection
 * Client/WebUI: do not reload Wallet page on new blocks as it was breaking the beeps
